further domain refactoring