@@ -21,6 +21,7 @@
 package password.pwm.config.value;
 
 import lombok.Builder;
+import lombok.EqualsAndHashCode;
 import lombok.Value;
 import password.pwm.PwmConstants;
 import password.pwm.config.PwmSetting;
@@ -29,6 +30,7 @@ import password.pwm.config.stored.XmlOutputProcessData;
 import password.pwm.error.PwmUnrecoverableException;
 import password.pwm.http.bean.ImmutableByteArray;
 import password.pwm.util.java.JsonUtil;
+import password.pwm.util.java.LazySupplier;
 import password.pwm.util.java.StringUtil;
 import password.pwm.util.java.XmlElement;
 import password.pwm.util.java.XmlFactory;
@@ -46,6 +48,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
+import java.util.function.Supplier;
 
 public class FileValue extends AbstractValue implements StoredValue
 {
@@ -59,51 +62,93 @@ public class FileValue extends AbstractValue implements StoredValue
     @Value
     public static class FileInformation implements Serializable
     {
-        private String filename;
-        private String filetype;
+        private static final long serialVersionUID = 1L;
+
+        private final String filename;
+        private final String filetype;
     }
 
-    @Value
+    @EqualsAndHashCode
     public static class FileContent implements Serializable
     {
-        private ImmutableByteArray contents;
+        private static final long serialVersionUID = 1L;
 
-        static FileContent fromEncodedString( final String input )
+        private final String b64EncodedContents;
+        private final transient Supplier<ImmutableByteArray> byteContents = new LazySupplier<>( this::convertToBytes );
+
+        private FileContent( final String b64EncodedContents )
+        {
+            this.b64EncodedContents = b64EncodedContents;
+        }
+
+        public static FileContent fromEncodedString( final String input )
                 throws IOException
         {
-            final String whitespaceStrippedInput = StringUtil.stripAllWhitespace( input );
-            final byte[] convertedBytes = StringUtil.base64Decode( whitespaceStrippedInput );
-            return new FileContent( ImmutableByteArray.of( convertedBytes ) );
+            return new FileContent( input );
+        }
+
+        public static FileContent fromBytes( final ImmutableByteArray contents )
+                throws PwmUnrecoverableException
+        {
+            final String input = StringUtil.base64Encode( contents.copyOf(), StringUtil.Base64Options.GZIP );
+            final String encodedLineBreaks = StringUtil.insertRepeatedLineBreaks( input, PwmConstants.XML_OUTPUT_LINE_WRAP_LENGTH );
+            return new FileContent( encodedLineBreaks );
         }
 
         String toEncodedString( )
                 throws IOException
         {
-            return StringUtil.base64Encode( contents.copyOf(), StringUtil.Base64Options.GZIP );
+            return b64EncodedContents;
         }
 
         String sha512sum( )
                 throws PwmUnrecoverableException
         {
-            return SecureEngine.hash( contents.newByteArrayInputStream(), PwmHashAlgorithm.SHA512 );
+            return SecureEngine.hash( byteContents.get().newByteArrayInputStream(), PwmHashAlgorithm.SHA512 );
         }
 
         public int size( )
         {
-            return contents.size();
+            return byteContents.get().size();
         }
+
+        public ImmutableByteArray getContents()
+        {
+            return byteContents.get();
+        }
+
+        private ImmutableByteArray convertToBytes( )
+        {
+            try
+            {
+                final String whitespaceStripped = StringUtil.stripAllWhitespace( b64EncodedContents );
+                final byte[] output = StringUtil.base64Decode( whitespaceStripped, StringUtil.Base64Options.GZIP );
+                return ImmutableByteArray.of( output );
+            }
+            catch ( final Exception e )
+            {
+                throw new IllegalStateException( e );
+            }
+        }
+    }
+
+    public static FileValue newFileValue( final String filename, final String fileMimeType, final ImmutableByteArray contents )
+            throws PwmUnrecoverableException
+    {
+        final FileInformation fileInformation = new FileValue.FileInformation( filename, fileMimeType );
+        final FileContent fileContent = FileContent.fromBytes( contents );
+        return new FileValue( Collections.singletonMap( fileInformation, fileContent ) );
     }
 
     public FileValue( final Map<FileInformation, FileContent> values )
     {
-        this.values = values == null ? Collections.emptyMap() : Collections.unmodifiableMap( values );
+        this.values = values == null ? Collections.emptyMap() : Map.copyOf( values );
     }
 
     public static StoredValueFactory factory( )
     {
         return new StoredValueFactory()
         {
-
             @Override
             public FileValue fromXmlElement( final PwmSetting pwmSetting, final XmlElement settingElement, final PwmSecurityKey input )
             {
